--- a/project5.css
+++ b/project5.css
@@ -24,6 +24,21 @@ html,body
     height:100%;
     width:100%
 }
+.loader
+{
+height:100vh;
+width:100vw;
+background-color:rgb(209, 209, 198);
+z-index:99;
+position:fixed;
+display:flex;
+align-items: center;
+justify-content: center;
+}
+
+.loader>h1{
+    font-family: b;
+}
 .cursor
 {
    
@@ -34,7 +49,7 @@ html,body
     right:0%;
     color:white;
     background-color: white;
-    position: absolute;
+    position: fixed;
     z-index: 40;
     
 }
